# routes/index.js
@@ -1,5 +1,6 @@
 import express from 'express';
-import countriesRouter from './countries.js';
+import countriesRouter from './countriesRoute.js';
+import touristsRouter from './touristsRoute.js';
 import swaggerUi from "swagger-ui-express";
 import fs from "fs";
 const router = express.Router();
@@ -16,5 +17,6 @@ router.use("/api-docs", swaggerUi.serve);
 router.get("/api-docs", swaggerUi.setup(swaggerDocument));
 
 router.use('/countries', countriesRouter);
+router.use('/tourists', touristsRouter);
 
 export default router;
